--- a/.pylintrc
+++ b/.pylintrc
@@ -56,6 +56,7 @@ confidence=
 # --disable=W"
 #
 disable=
+    chained-comparison,
     duplicate-code,
     parameter-unpacking,
     raw-checker-failed,
@@ -65,6 +66,7 @@ disable=
     file-ignored,
     suppressed-message,
     useless-suppression,
+    useless-object-inheritance,
     deprecated-pragma,
     no-absolute-import,
     missing-param-doc,
